tests/semantic_errors/andrei23_3.tl
require "ifj21"

global name : function (integer) : string, string, string
global name : function (integer) : string, string, string
function name    (a : integer) : string, string, string end

function main()
end

global name : function (integer)

main()
